name:           thyme
version:        0.3.0.0
synopsis:       A faster time library
description:
    Thyme is a rewrite of the fine @time@ library, with a particular focus
    on performance for applications that make heavy use of timestamps.
    .
    See "Data.Thyme" for a full description.
homepage:       https://github.com/liyang/thyme
license:        BSD3
license-file:   LICENSE
author:         Liyang HU, Ashley Yakeley
maintainer:     thyme@liyang.hu
copyright:      © 2013 Liyang HU
category:       Data, System
build-type:     Simple
cabal-version:  >= 1.8
stability:      experimental
extra-source-files:
    include/thyme.h

source-repository head
    type:       git
    location:   http://github.com/liyang/thyme

flag bug-for-bug
    description: bug-for-bug compatibility with time
    default: True
    manual: True

flag show-internal
    description: instance Show of internal representation
    default: False
    manual: True

flag Werror
    description: -Werror
    default: False
    manual: True

library
    include-dirs: include
    hs-source-dirs: src
    exposed-modules:
        Data.Thyme
        Data.Thyme.Calendar
        Data.Thyme.Calendar.MonthDay
        Data.Thyme.Calendar.OrdinalDate
        Data.Thyme.Calendar.WeekDate
        Data.Thyme.Calendar.WeekdayOfMonth
        Data.Thyme.Clock
        Data.Thyme.Clock.POSIX
        Data.Thyme.Clock.TAI
        Data.Thyme.Format
        Data.Thyme.Format.Human
        Data.Thyme.LocalTime
        Data.Thyme.Time
        Data.Thyme.Time.Core
    other-modules:
        Data.Micro
        Data.Thyme.Calendar.Internal
        Data.Thyme.Clock.Internal
        Data.Thyme.Format.Internal
        Data.Thyme.LocalTime.Internal
        Data.Thyme.LocalTime.TimeZone
        Data.Thyme.TH
    build-depends:
        QuickCheck >= 2.4,
        attoparsec >= 0.10,
        base >= 4.5 && < 5,
        bytestring >= 0.9,
        containers,
        deepseq >= 1.2,
        lens >= 3.9,
        old-locale >= 1.0,
        random,
        template-haskell >= 2.6,
        text >= 0.11,
        time >= 1.4,
        transformers,
        vector >= 0.9,
        vector-space >= 0.8
    ghc-options: -Wall
    if flag(bug-for-bug)
        cpp-options: -DBUG_FOR_BUG=1
    if flag(show-internal)
        cpp-options: -DSHOW_INTERNAL=1
    if flag(Werror)
        ghc-options: -Werror

test-suite sanity
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: sanity.hs
    other-modules: Common
    build-depends:
        QuickCheck,
        attoparsec,
        base,
        bytestring,
        lens,
        old-locale,
        text,
        thyme,
        time,
        vector-space
    ghc-options: -Wall

test-suite rewrite
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: rewrite.hs
    build-depends:
        Cabal,
        base,
        containers,
        directory,
        filepath,
        random,
        system-posix-redirect >= 1.1,
        text,
        thyme
    ghc-options: -Wall

benchmark bench
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: bench.hs
    other-modules: Common
    build-depends:
        QuickCheck,
        base,
        criterion,
        lens,
        old-locale,
        random,
        thyme,
        time,
        transformers,
        vector-space
    ghc-options: -Wall

-- vim: et sw=4 ts=4 sts=4:

